scaffolding for site header site footer, adding nimbus

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -1,3 +1,6 @@
+/* Font Declarations
+========================================================================== */
+
 /* Base
 ========================================================================== */
 
