--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -9,6 +9,9 @@
             ];
         </script>
         <script src="//unpkg.com/yett"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
         <link media="screen" rel="stylesheet" href="{{ '/css/index.css'|path }}">
         <title>Preview Layout</title>
         <script>
