bootstrap installed, added fonts, updated variables, typography setup

--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -25,6 +25,7 @@
         </div>
         {% render "@privacy-consent" %}
         <script src="{{ '/js/index.js'|path }}"></script>
+        <script src="https://kit.fontawesome.com/b658fac974.js" crossorigin="anonymous"></script>
         <link media="print" rel="stylesheet" href="{{ '/css/print.css'|path }}">
     </body>
 </html>
