--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -5,15 +5,22 @@ $primary: #369;
 $secondary: #4e7dab;
 $tertiary: #7ba3ca;
 $white: #fff;
-$black: #000;
+$off-white: #f5f5f5;
+$light-grey: #ebebeb;
+$dark-grey: #003d4c;
+$grey: #4a4a4a;
+$black: #4a4a4a;
+$red: #c8102e;
+$red2: #7c2529;
+$yellow: #eabf5e;
 
-$silc-utilities--colors: (
-    ("primary", $primary),
-    ("secondary", $secondary),
-    ("tertiary", $tertiary),
-    ("white", $white),
-    ("black", $black)
-);
+/* Fonts
+   ========================================================================== */
+$nimbus-sans-regular: "nimbus_sans_lregular", sans-serif;
+$nimbus-sans-regular-italic: "nimbus_sans_lregular_italic", sans-serif;
+$nimbus-sans-bold: "nimbus_sans_lbold", sans-serif;
+$nimbus-sans-bold-italic: "nimbus_sans_lbold_italic", sans-serif;
+$merriweather: "Merriweather", serif;
 
 /* Base
    ========================================================================== */
@@ -31,7 +38,6 @@ $link-color: $black;
 $link-text-decoration: underline;
 $link-transition: 0.25s color ease-in-out;
 $link_hover-color: $black;
-
 $fancy-link-color: $primary;
 $fancy-link-font-family: $base-font-family;
 $fancy-link-font-size: $base-font-size;
@@ -109,3 +115,12 @@ $h6-margin: 3rem 0 1rem; // 48px top, 16px bottom
 
 /* Section
    ========================================================================== */
+
+/* Silc Accordion
+   ========================================================================== */
+$silc-accordion__label-padding: 1rem;
+$silc-accordion__label-background: #f1f1f1;
+$silc-accordion__content-padding: 1rem;
+$silc-accordion__label--hover-background: #ccc;
+$silc-accordion__label--active-background: #eee;
+$silc-accordion__content-border: 1px solid #eee;
