--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -9,7 +9,7 @@ $off-white: #f5f5f5;
 $light-grey: #ebebeb;
 $dark-grey: #003d4c;
 $grey: #4a4a4a;
-$black: #4a4a4a;
+$black: #000000;
 $red: #c8102e;
 $red2: #7c2529;
 $yellow: #eabf5e;
@@ -21,6 +21,7 @@ $nimbus-sans-regular-italic: "nimbus_sans_lregular_italic", sans-serif;
 $nimbus-sans-bold: "nimbus_sans_lbold", sans-serif;
 $nimbus-sans-bold-italic: "nimbus_sans_lbold_italic", sans-serif;
 $merriweather: "Merriweather", serif;
+$font-size-root: 16px;
 
 /* Base
    ========================================================================== */
