--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,6 +24,10 @@
 // Custom Components
 @import "components/overrides";
 @import "../components/button/button";
+@import "../components/button-set/button-set";
+@import "../components/link-secondary/link-secondary";
+@import "../components/link-tertiary/link-tertiary";
+@import "../components/link-set/link-set";
 @import "../components/breadcrumb/breadcrumb";
 @import "../components/carousel/carousel";
 @import "../components/card/card";
