--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,6 +34,7 @@
 @import "../components/hero/hero";
 @import "../components/share/share";
 @import "../components/table/table";
+@import "../components/multi-column-text/multi-column-text";
 @import "../components/tags/tags";
 @import "../components/blockquote/blockquote";
 @import "../components/iframe/iframe";
