--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -33,5 +33,11 @@
     <div class="paragraph-widget paragraph-widget--link-set">
         {% include "@link-set" with link_set %}
     </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Heading 2 - This is a title of the next major section</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+      </div>
+    </div>
   </div>
 </section>
