--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -1,15 +1,26 @@
+html {
+  box-sizing: border-box;
+  height: 100%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
-    margin: 0;
-    background-color: $white;
+  margin: 0;
+  background-color: $white;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 ul,
 ol {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
