--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -24,3 +24,95 @@ ol {
   margin: 0;
   padding: 0;
 }
+
+// basic page WYSIWYG image styles
+.align-left,
+.align-right,
+.align-center {
+  margin: rem(36) 0;
+  display: table;
+  max-width: 100%;
+  @include media-breakpoint-up(md) {
+    margin: rem(8) 0;
+  }
+  img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+    width: 100%;
+  }
+  figcaption {
+    caption-side: bottom;
+    display: table-caption;
+    margin-top: rem(8);
+    font-family: $nimbus-sans-regular-italic;
+    font-size: rem(16);
+    line-height: (26 / 16);
+    @include media-breakpoint-up(lg) {
+      font-size: rem(14);
+      line-height: (22 / 14);
+    }
+  }
+}
+
+.align-center {
+  margin-top: rem(45);
+  position: relative;
+  @include media-breakpoint-up(lg) {
+    max-width: 82%;
+    margin: rem(60) auto;
+    clear: both;
+  }
+
+  figcaption {
+    text-align: left;
+    position: relative;
+    @include media-breakpoint-up(lg) {
+      padding-right: rem(104);
+    }
+  }
+}
+
+.align-left,
+.align-right {
+  float: none;
+  @include media-breakpoint-up(md) {
+    max-width: 37%;
+  }
+}
+
+.align-left {
+  @include media-breakpoint-up(md) {
+    margin-right: rem(55);
+    float: left;
+  }
+  @include media-breakpoint-up(lg) {
+    margin-right: rem(88);
+  }
+}
+
+.align-right {
+  @include media-breakpoint-up(md) {
+    margin-left: rem(55);
+    float: right;
+  }
+  @include media-breakpoint-up(lg) {
+    margin-left: rem(88);
+  }
+}
+
+// paragraph widgets
+.paragraph-widget {
+  @include media-breakpoint-up(lg) {
+    margin-top: rem(30);
+    margin-bottom: rem(40);
+  }
+}
+
+// external link text for screen readers
+[target="_blank"] {
+  &:after {
+    content: " (Opens in new tab/window)";
+    @extend %visible-for-screen-readers;
+  }
+}
