Adding typescript typings for bootstrap, accordion

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,7 +12,9 @@
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/accordion";
 
 // Core
 @import "_core/functions";
