accordion component completed

--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -85,6 +85,7 @@
       </div>
     </div>
     <div class="paragraph-widget paragraph-widget--accordion">
+      {% include "@accordion" with accordion %}
     </div>
     <div class="paragraph-widget paragraph-widget--text-html">
       <div class="text-content">
