--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,6 +22,7 @@
 @import "_core/base";
 @import "_core/typography";
 @import "_core/layout";
+@import "_core/accordion";
 
 // Custom Components
 @import "components/overrides";
