--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -236,13 +236,15 @@ h2,
   padding-bottom: rem(28);
   margin-bottom: rem(22);
   position: relative;
-  &:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: rem(50);
-    border-bottom: rem(2) solid $yellow;
-    left: 0;
+  .text-content & {
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: rem(50);
+      border-bottom: rem(2) solid $yellow;
+      left: 0;
+    }
   }
   & + h3,
   & + .h3,
