statistic and statistic-with-text components complete

--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -12,7 +12,7 @@ $grey: #4a4a4a;
 $black: #000000;
 $red: #c8102e;
 $red2: #7c2529;
-$yellow: #eabf5e;
+$yellow: #f1be48;
 
 /* Fonts
    ========================================================================== */
