--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,6 +37,8 @@
 @import "../components/hero/hero";
 @import "../components/share/share";
 @import "../components/table/table";
+@import "../components/statistic/statistic";
+@import "../components/statistic-with-text/statistic-with-text";
 @import "../components/multi-column-text/multi-column-text";
 @import "../components/tags/tags";
 @import "../components/blockquote/blockquote";
