--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,6 +37,8 @@
 @import "../components/hero/hero";
 @import "../components/share/share";
 @import "../components/table/table";
+@import "../components/image-grid/image-grid";
+@import "../components/image-grid-with-text/image-grid-with-text";
 @import "../components/statistic/statistic";
 @import "../components/statistic-with-text/statistic-with-text";
 @import "../components/multi-column-text/multi-column-text";
@@ -45,6 +47,8 @@
 @import "../components/iframe/iframe";
 @import "../components/modal/modal";
 @import "../components/callout/callout";
+@import "../components/callout-with-image/callout-with-image";
+@import "../components/callout-with-image-small-set/callout-with-image-small-set";
 @import "../components/lazyload/lazyload";
 @import "../components/privacy-consent/privacy-consent";
 @import "../components/privacy-toggle/privacy-toggle";
