--- a/src/components/callout-with-image/callout-with-image.twig
+++ b/src/components/callout-with-image/callout-with-image.twig
@@ -1,8 +1,8 @@
-<div class="h2-callout-with-image">
-  <div class="h2-callout-with-image__media">
+<div class="callout-with-image">
+  <div class="callout-with-image__media">
     <img src="{{ image|path }}" alt="" width="622" height="414" />
   </div>
-  <div class="h2-callout-with-image__content">
+  <div class="callout-with-image__content text-content">
     <h2>{{title}}</h2>
     <p>{{body_copy}}</p>
     {% include "@button" with button %}
