--- a/src/components/link-set/_link-set.scss
+++ b/src/components/link-set/_link-set.scss
@@ -2,6 +2,20 @@
   margin-bottom: rem(50);
 }
 
+.link-set {
+  ul {
+    padding: 0;
+    li {
+      padding-left: 0;
+      margin: 0;
+      text-indent: 0;
+      &:before {
+        display: none;
+      }
+    }
+  }
+}
+
 .link-set__link {
   &[class="link-set__link"][href*="//"]:not([href*="iastate.edu"]) {
     color: $red2;
