--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -95,5 +95,35 @@
     <div class="paragraph-widget paragraph-widget--statistic-with-text">
       {% include "@statistic-with-text" with statistic_with_text %}
     </div>
+    <div class="paragraph-widget paragraph-widget--callout-with-image">
+      {% include "@callout-with-image" with callout_with_image %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Feature with H3 and 1 Small Image</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--callout-with-image-small-set">
+      {% include "@callout-with-image-small-set" with callout_with_image_small_set_one %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Feature with H3 and 2 Small Images</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--callout-with-image-small-set">
+      {% include "@callout-with-image-small-set" with callout_with_image_small_set_two %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Feature with H3 and 3 Small Images</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--callout-with-image-small-set">
+      {% include "@callout-with-image-small-set" with callout_with_image_small_set_three %}
+    </div>
+    <div class="paragraph-widget paragraph-widget--image-grid-with-text">
+      {% include "@image-grid-with-text" with image_grid_with_text %}
+    </div>
   </div>
 </section>
