--- a/src/components/image-grid-with-text/_image-grid-with-text.scss
+++ b/src/components/image-grid-with-text/_image-grid-with-text.scss
@@ -1,6 +1,6 @@
 // image on desktop needs to be pull 216px out to the right
 .image-grid-with-text {
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     display: flex;
   }
   ul {
@@ -17,9 +17,16 @@
 
 .image-grid-with-text__content,
 .image-grid {
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     flex: 0 1 auto;
     width: 50%;
+  }
+}
+
+.image-grid-with-text__content {
+  margin-bottom: rem(35);
+  @include media-breakpoint-up(lg) {
+    padding-right: rem(50);
   }
 }
 
@@ -27,6 +34,7 @@
   @include media-breakpoint-up(lg) {
     margin-right: rem(-108);
     width: 60%;
+    padding-left: rem(50);
   }
   @include media-breakpoint-up(xl) {
     margin-right: rem(-216);
