youtube video embed component complete

--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -125,5 +125,13 @@
     <div class="paragraph-widget paragraph-widget--image-grid-with-text">
       {% include "@image-grid-with-text" with image_grid_with_text %}
     </div>
+    <div class="paragraph-widget paragraph-widget--text-html">
+      <div class="text-content">
+        <h2>Video</h2>
+      </div>
+    </div>
+    <div class="paragraph-widget paragraph-widget--video-embed">
+      {% include "@video-embed" with video_embed %}
+    </div>
   </div>
 </section>
