--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,6 +36,7 @@
 @import "../components/card/card";
 @import "../components/hero/hero";
 @import "../components/share/share";
+@import "../components/video-embed/video-embed";
 @import "../components/table/table";
 @import "../components/image-grid/image-grid";
 @import "../components/image-grid-with-text/image-grid-with-text";
