link-block component complete

--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -133,5 +133,8 @@
     <div class="paragraph-widget paragraph-widget--video-embed">
       {% include "@video-embed" with video_embed %}
     </div>
+    <div class="paragraph-widget paragraph-widget--link-block">
+      {% include "@link-block" with link_block %}
+    </div>
   </div>
 </section>
