--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -31,6 +31,7 @@
 @import "../components/link-secondary/link-secondary";
 @import "../components/link-tertiary/link-tertiary";
 @import "../components/link-set/link-set";
+@import "../components/link-block/link-block";
 @import "../components/breadcrumb/breadcrumb";
 @import "../components/carousel/carousel";
 @import "../components/card/card";
