--- a/src/components/link-set/_link-set.scss
+++ b/src/components/link-set/_link-set.scss
@@ -7,7 +7,7 @@
     padding: 0;
     li {
       padding-left: 0;
-      margin: 0;
+      margin: 0 0 rem(5) 0;
       text-indent: 0;
       &:before {
         display: none;
