--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -136,5 +136,8 @@
     <div class="paragraph-widget paragraph-widget--link-block">
       {% include "@link-block" with link_block %}
     </div>
+    <div class="paragraph-widget paragraph-widget--external-news-story">
+      {% include "@external-news-story" with external_news_story %}
+    </div>
   </div>
 </section>
