--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,6 +36,7 @@
 @import "../components/carousel/carousel";
 @import "../components/card/card";
 @import "../components/hero/hero";
+@import "../components/external-news-story/external-news-story";
 @import "../components/share/share";
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
