--- a/src/components/link-block/_link-block.scss
+++ b/src/components/link-block/_link-block.scss
@@ -1,7 +1,5 @@
 .paragraph-widget--link-block {
-  @include media-breakpoint-up(xl) {
-    margin-right: rem(-108);
-  }
+  @extend %extended-component-width;
 }
 
 .link-block {
